	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

========================
10/30
	* Set the inf2 to encore skills of Wand of Hermode [Skotlex]
10/29
	* Official NJ/GS exp chart for level 1-48 [Playtester]
	* Added Shinobi Sash to Shinobi drops [Playtester]
	* Fixed const.txt, thanks to flaviojs [Vicious]
	* Fixed homunculus's growth, according to Aegis [Vicious]
10/27
	* Made Thief Clothes and Ninja Suit being equippable by Ninja [Playtester]
	* More Odin/Kiel fixes [Playtester]
10/26
	* Fixed Constant's explode not working as it should [Playtester]
10/25
	* More Kiel Mob updates [Playtester]
	* Changed order of Aliza drops to prevent steal exploit [Playtester]
	* MG_STONECURSE and NPC_PETRIFYATTACK now use time1 to specify the
	  "petrifying time". This value has been set to 5 seconds. [Skotlex]
	* Fixed view ids of some headgears [Playtester]
10/24
	* Kiel Mob updates [Playtester]
	* Reverted Lupus' map_index update. map_index should NOT be touched. [Vicious]
	* Updated map index accordingly [Lupus]
10/23
	* Adjusted LK_BERSERK so you can only use it when you have 20% or less
	  life. [Skotlex]
10/20
	* Official Muscipular drops [Playtester]
10/19
	* Added the actual skill delay of 1000ms to Triple Attack and Chain combo
	  in skill_cast_db. Added Combo Finish and TigerFist as well with a delay of
	  700ms. [Skotlex]
	* Added the Monk combos to skill_castnodex so their delay is not decreased
	  by skills. [Skotlex]
10/18
	* Updated the packetdb for the 2006-10-17a client. [Zephiris]
10/16
	* Corrected issen's range to 5, as per the login packet information.
	  [Skotlex]
	* Applied most of Mpeg's work on Ninja Skills. For information see: